Liste des voyages et modification mineure

--- a/assets/css/connexion.css
+++ b/assets/css/connexion.css
@@ -3,7 +3,7 @@
     place-self: center;
     justify-content: center;
     align-items: center;
-    background: #709CA7;
+    background: #344D59;
     border-radius: 50px;
     padding: 50px;
     width: fit-content;
@@ -16,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #B8CBD0;
+    background-color: #709CA7;
     border-radius: 30px;
     padding: 40px;
     width: 100%;
