--- a/assets/css/liste.css
+++ b/assets/css/liste.css
@@ -16,3 +16,22 @@
       align-content: center;
       flex-wrap: wrap;
  }
+
+ .hover-text {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     color: #B8CBD0;
+     font-size: 30px;
+     background-color: #137C8B;
+     border: 5px solid #344D59;
+     padding: 10px 20px;
+     border-radius: 5px;
+     opacity: 0;
+     transition: opacity 0.3s ease-in-out;
+ }
+
+ .image-destination:hover .hover-text {
+     opacity: 1;
+ }
