--- a/assets/css/liste.css
+++ b/assets/css/liste.css
@@ -35,3 +35,33 @@
  .image-destination:hover .hover-text {
      opacity: 1;
  }
+
+ .filtrage{
+     place-self: center;
+     display: flex;
+     gap: 45px;
+     justify-content: center;
+     align-content: center;
+     background-color: #137C8B;
+     border: 4px solid #344D59;
+     margin: 25px 0;
+     padding: 25px;
+     height: auto;
+     width: fit-content;
+     border-radius: 30px;
+ }
+
+ .filtre{
+     -webkit-appearance: none;
+     appearance: none;
+     border-radius: 30px;
+     height: auto;
+     background: #B8CBD0;
+     border: 2px solid #344D59;
+     outline: 0;
+     padding: 10px;
+     text-align: center;
+     width: 200px;
+     font-size: 15px;
+     font-family: Arial, sans-serif;
+ }
