--- a/assets/css/connexion.css
+++ b/assets/css/connexion.css
@@ -33,6 +33,24 @@
     height: 35px;
     margin: 20px;
     padding: 0 15px;
+
+}
+
+.input-formu-9{
+    font-family: Arial, sans-serif;
+    background-color: #B8CBD0;
+    border: 4px solid #344D59;
+    border-radius: 30px;
+    width: 300px;
+    height: 35px;
+    margin: 20px;
+    padding: 0 15px;
+    transition: 0.2s;
+}
+
+.input-formu-9:hover{
+    box-shadow: 0 0 0 4px #709CA7,
+    0 0 0 8px #137C8B;
 }
 
 .formu-lab{
