--- a/assets/css/connexion.css
+++ b/assets/css/connexion.css
@@ -73,6 +73,18 @@
     gap: 25px;
 }
 
+.ul-button-2{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding: 0;
+    flex-wrap: wrap;
+    width: 400px;
+    height: 200px;
+    gap: 25px;
+}
+
 .bouton-form{
     background: #B8CBD0;
     padding: 8px 15px;
@@ -83,7 +95,22 @@
     color: #344D59;
 }
 
+.bouton-form-17{
+    background: #B8CBD0;
+    padding: 8px 15px;
+    border-radius: 10px;
+    font-size: 15px;
+    transition: 0.2s;
+    border: 4px solid #344D59;
+    color: #344D59;
+}
+
 .bouton-form:hover{
+    box-shadow: 0 0 0 4px #709CA7,
+    0 0 0 8px #137C8B;
+}
+
+.bouton-form-17:hover{
     box-shadow: 0 0 0 4px #709CA7,
     0 0 0 8px #137C8B;
 }
